# ansible-collection-stegmannb-general

./: .ansible-lint  .gitignore  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  LICENSE  README.md  galaxy.yml  mise.toml  pyproject.toml
plugins/modules/: download.py
roles/group_facts/: README.md
roles/group_facts/meta/: argument_specs.yml  main.yml
roles/group_facts/molecule/resources/: molecule.yml
roles/group_facts/molecule/resources/playbooks/: converge.yml  create.yml
roles/group_facts/tasks/: main.yml
tests/integration/: test_download.yml
