[project]
name = "ansible-collection-stegmannb-common"
version = "0.1.0"
description = "Ansible Collection for stegmannb Common"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ansible>=11.2.0",
    "argcomplete>=3.6.0",
]

[dependency-groups]
dev = [
    "ansible-lint>=25.1.2",
    "molecule>=25.2.0",
]
